--- a/utilities/Makefile.in
+++ b/utilities/Makefile.in
@@ -253,6 +253,7 @@ PERL = @PERL@
 PERL_MAKE_OPTIONS = @PERL_MAKE_OPTIONS@
 PGPDecodeDelegate = @PGPDecodeDelegate@
 POVDelegate = @POVDelegate@
+POW_LIB = @POW_LIB@
 PREFIX_DIR = @PREFIX_DIR@
 PSDelegate = @PSDelegate@
 PrintDelegate = @PrintDelegate@
@@ -346,7 +347,7 @@ xml2_config = @xml2_config@
 AUTOMAKE_OPTIONS = 1.7 foreign
 
 MAGICK_LIB = ../magick/libMagick.la # libtool library name
-INCLUDES = -I../ -I$(top_srcdir)/magick $(INCLTDL) $(X_CFLAGS)
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/magick
 
 STDMANPAGES = ImageMagick.1  composite.1 conjure.1 convert.1  identify.1 \
    miff.4 mogrify.1 montage.1 quantize.5
