Get includes to work again.

--- a/utilities/Makefile.am
+++ b/utilities/Makefile.am
@@ -32,7 +32,7 @@
 AUTOMAKE_OPTIONS = 1.7 foreign
 
 MAGICK_LIB	= ../magick/libMagick.la # libtool library name
-INCLUDES	= -I$(top_srcdir) -I$(top_srcdir)/magick
+INCLUDES	=  -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/magick
 
 STDMANPAGES = ImageMagick.1  composite.1 conjure.1 convert.1  identify.1 \
    miff.4 mogrify.1 montage.1 quantize.5
