--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -254,6 +254,7 @@ PERL = @PERL@
 PERL_MAKE_OPTIONS = @PERL_MAKE_OPTIONS@
 PGPDecodeDelegate = @PGPDecodeDelegate@
 POVDelegate = @POVDelegate@
+POW_LIB = @POW_LIB@
 PREFIX_DIR = @PREFIX_DIR@
 PSDelegate = @PSDelegate@
 PrintDelegate = @PrintDelegate@
@@ -346,7 +347,7 @@ xml2_config = @xml2_config@
 # Don't require all the GNU mandated files
 AUTOMAKE_OPTIONS = 1.7 foreign
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/magick
+INCLUDES = -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/magick
 @HasWINGDI32_FALSE@MAGICK_GDI32_MODULES = 
 
 @HasWINGDI32_TRUE@MAGICK_GDI32_MODULES = clipboard.la emf.la
