--- a/Magick++/lib/Makefile.in
+++ b/Magick++/lib/Makefile.in
@@ -223,6 +223,7 @@ PERL = @PERL@
 PERL_MAKE_OPTIONS = @PERL_MAKE_OPTIONS@
 PGPDecodeDelegate = @PGPDecodeDelegate@
 POVDelegate = @POVDelegate@
+POW_LIB = @POW_LIB@
 PREFIX_DIR = @PREFIX_DIR@
 PSDelegate = @PSDelegate@
 PrintDelegate = @PrintDelegate@
@@ -334,7 +335,7 @@ libMagick___la_SOURCES = \
 
 # Add -no-undefined once Cygwin supports throwing C++ exceptions from DLLs.
 libMagick___la_LDFLAGS = \
-	-version-info $(MAJOR_VERSION):$(MINOR_VERSION)$(MICRO_VERSION):0
+	-release $(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION)
 
 
 libMagick___la_LIBADD = ../../magick/libMagick.la
