--- a/magick/Makefile.am
+++ b/magick/Makefile.am
@@ -44,7 +44,7 @@ INCLUDES = -I$(top_srcdir) $(INCLTDL)
 ALLMANPAGES = Magick-config.1
 
 libMagick_la_LDFLAGS = -no-undefined \
-	-version-info $(MAJOR_VERSION):$(MINOR_VERSION)$(MICRO_VERSION):0
+	-release $(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION)
 
 #AM_CFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 AM_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
