--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -47,7 +47,6 @@ srcdir = @srcdir@
 top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
-pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
 top_builddir = ..
 
@@ -67,6 +66,9 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
+
+# Where config files get installed
+pkglibdir = @MagickLibPath@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -238,6 +240,8 @@ MODULE_EXTRA_CPPFLAGS = @MODULE_EXTRA_CPPFLAGS@
 MPEGDecodeDelegate = @MPEGDecodeDelegate@
 MPEGEncodeDelegate = @MPEGEncodeDelegate@
 MVDelegate = @MVDelegate@
+MagickLibPath = @MagickLibPath@
+MagickModulesPath = @MagickModulesPath@
 MagickSharePath = @MagickSharePath@
 MogrifyDelegate = @MogrifyDelegate@
 OBJDUMP = @OBJDUMP@
@@ -379,7 +383,7 @@ noinst_HEADERS =
 LIBMAGICK = ../magick/libMagick.la
 
 # Where modules are installed
-pkgdir = $(libdir)/ImageMagick/modules/coders
+pkgdir = @MagickModulesPath@
 
 # Architecture-dependent data files installed with modules
 @WITH_MODULES_TRUE@pkg_DATA = modules.mgk
