--- a/coders/delegates.mgk.in
+++ b/coders/delegates.mgk.in
@@ -15,8 +15,10 @@
     set terminal postscript portrait color solid; set output "%o"; load "%i"" > %u;@GnuplotDecodeDelegate@ %u' />
   <delegate decode="gs-color" stealth="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=@GSColorDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
   <delegate decode="gs-mono" stealth="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=@GSMonoDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
+  <delegate decode="hpg" command='@HPGLDecodeDelegate@ -q -m eps -f `basename "%o"` "%i"
+    mv -f `basename "%o"` "%o"' />
   <delegate decode="hpgl" command='@HPGLDecodeDelegate@ -q -m eps -f `basename "%o"` "%i"
-    mv -f `basename "%o"` "%o' />
+    mv -f `basename "%o"` "%o"' />
   <delegate decode="htm" command='@HTMLDecodeDelegate@ -U -o "%o" "%i"' />
   <delegate decode="html" command='@HTMLDecodeDelegate@ -U -o "%o" "%i"' />
   <delegate decode="ilbm" command='@ILBMDecodeDelegate@ "%i" > "%o"' />
