--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -214,7 +214,6 @@ LIB_WMF_DEPS = @LIB_WMF_DEPS@
 LIB_X11 = @LIB_X11@
 LIB_XEXT = @LIB_XEXT@
 LIB_XML = @LIB_XML@
-LIB_XT = @LIB_XT@
 LIB_ZLIB = @LIB_ZLIB@
 LN_S = @LN_S@
 LOCALSTATE_DIR = @LOCALSTATE_DIR@
@@ -464,7 +463,7 @@ dib_la_LIBADD = $(LIBMAGICK)
 # DPS module
 dps_la_SOURCES = dps.c
 dps_la_LDFLAGS = $(MODULECOMMONFLAGS)
-dps_la_LIBADD = $(LIBMAGICK) @LIB_DPS@ @LIB_XEXT@ @LIB_XT@ @LIB_X11@
+dps_la_LIBADD = $(LIBMAGICK) @LIB_DPS@ @LIB_XEXT@ @LIB_X11@
 
 # DPX module
 dpx_la_SOURCES = dpx.c
