--- a/configure.ac
+++ b/configure.ac
@@ -916,7 +916,6 @@ AC_SUBST(LIB_BZLIB)
 #
 LIB_X11=''
 LIB_XEXT=''
-LIB_XT=''
 AC_PATH_XTRA
 if test "$no_x" != 'yes'
 then
@@ -932,8 +931,7 @@ then
   AC_CHECK_LIB(Xext,XShapeCombineMask,LIB_XEXT='-lXext',,)
   AC_CHECK_LIB(Xext,XShapeCombineMask,AC_DEFINE(HasShape,,X11 server supports shape extension),,)
 
-  AC_CHECK_LIB(Xt,XtSetEventDispatcher,LIB_XT='-lXt',,)
-  LIBS="$LIB_XEXT $LIB_XT $LIBS"
+  LIBS="$LIB_XEXT $LIBS"
 fi
 if test "$no_x" != 'yes'
 then
@@ -944,7 +942,6 @@ fi
 AM_CONDITIONAL(HasX11, test "$have_x" = 'yes')
 AC_SUBST(LIB_X11)
 AC_SUBST(LIB_XEXT)
-AC_SUBST(LIB_XT)
 
 #
 # If profiling, then check for -ldl and dlopen (required for Solaris & gcc)
@@ -2089,9 +2086,9 @@ fi
 #
 if test "$with_modules" != 'no'
 then
-  MAGICK_DEP_LIBS="$LIB_LCMS $LIB_TTF $LIB_GS $LIB_XEXT $LIB_XT $LIB_X11 $LIB_ZLIB $LIB_GDI32 $LIB_THREAD $LIB_LF $LIB_MATH $LIB_CCMALLOC"
+  MAGICK_DEP_LIBS="$LIB_LCMS $LIB_TTF $LIB_GS $LIB_XEXT $LIB_X11 $LIB_ZLIB $LIB_GDI32 $LIB_THREAD $LIB_LF $LIB_MATH $LIB_CCMALLOC"
 else
-  MAGICK_DEP_LIBS="$LIB_JBIG $LIB_HDF $LIB_LCMS $LIB_MPEG2 $LIB_TIFF $LIB_TTF $LIB_JP2 $LIB_JPEG $LIB_GS $LIB_PNG $LIB_FPX $LIB_WMF $LIB_DPS $LIB_XEXT $LIB_XT $LIB_X11 $LIB_BZLIB $LIB_XML $LIB_ZLIB $LIB_GDI32 $LIB_THREAD $LIB_LF $LIB_MATH $LIB_CCMALLOC"
+  MAGICK_DEP_LIBS="$LIB_JBIG $LIB_HDF $LIB_LCMS $LIB_MPEG2 $LIB_TIFF $LIB_TTF $LIB_JP2 $LIB_JPEG $LIB_GS $LIB_PNG $LIB_FPX $LIB_WMF $LIB_DPS $LIB_XEXT $LIB_X11 $LIB_BZLIB $LIB_XML $LIB_ZLIB $LIB_GDI32 $LIB_THREAD $LIB_LF $LIB_MATH $LIB_CCMALLOC"
 fi
 AC_SUBST(MAGICK_DEP_LIBS)
 
