--- a/Magick++/lib/Magick++/Makefile.in
+++ b/Magick++/lib/Magick++/Makefile.in
@@ -343,7 +343,7 @@ all: all-am
 .SUFFIXES:
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  Magick++/lib/Magick++/Makefile
+	  $(AUTOMAKE) --foreign  Magick++/lib/Magick++/Makefile
 Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 
