--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -377,10 +377,10 @@ MAGICK_BASE_SRCS = memory.c blob.c cache.c locale.c error.c monitor.c \
 
 # Platform specific source files that may appear in the library
 EXTRA_libMagick_la_SOURCES = nt_base.c nt_feature.c
+@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = nt_feature.c
 
 @WIN32_NATIVE_BUILD_TRUE@MAGICK_PLATFORM_SRCS = nt_base.c nt_feature.c
 @CYGWIN_BUILD_FALSE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = 
-@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = nt_feature.c
 @WITH_MODULES_FALSE@libMagick_la_SOURCES = $(MAGICK_BASE_SRCS) $(MAGICK_PLATFORM_SRCS)
 
 # Library sources
@@ -434,7 +434,7 @@ am__libMagick_la_SOURCES_DIST = memory.c blob.c cache.c locale.c error.c \
 	command.c gem.c registry.c magic.c magick.c delegate.c module.c \
 	static.c resource.c log.c timer.c utility.c cache_view.c \
 	stream.c version.c animate.c display.c widget.c xwindow.c \
-	PreRvIcccm.c deprecate.c nt_base.c nt_feature.c
+	PreRvIcccm.c deprecate.c nt_feature.c nt_base.c
 am__objects_1 = memory.lo blob.lo cache.lo locale.lo error.lo monitor.lo \
 	constitute.lo image.lo composite.lo list.lo color.lo \
 	quantize.lo segment.lo resize.lo transform.lo shear.lo \
