--- a/Magick++/Makefile.in
+++ b/Magick++/Makefile.in
@@ -319,7 +319,7 @@ xml2_config = @xml2_config@
 #
 # Copyright Bob Friesenhahn, 1999, 2000, 2002
 #
-AUTOMAKE_OPTIONS = 1.7 dist-zip
+AUTOMAKE_OPTIONS = 1.7 foreign
 
 # Additional files to distribute
 EXTRA_DIST = 
