--- a/Magick++/tests/Makefile.in
+++ b/Magick++/tests/Makefile.in
@@ -319,7 +319,7 @@ xml2_config = @xml2_config@
 #
 # Copyright Bob Friesenhahn, 1999, 2000, 2002
 #
-AUTOMAKE_OPTIONS = 1.7
+AUTOMAKE_OPTIONS = 1.7 foreign
 
 INCLUDES = -I$(srcdir)/../lib -I../.. -I$(top_srcdir)
 
