Remove cruft from configure.ac

--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -255,7 +255,6 @@ PERL = @PERL@
 PERL_MAKE_OPTIONS = @PERL_MAKE_OPTIONS@
 PGPDecodeDelegate = @PGPDecodeDelegate@
 POVDelegate = @POVDelegate@
-POW_LIB = @POW_LIB@
 PREFIX_DIR = @PREFIX_DIR@
 PSDelegate = @PSDelegate@
 PrintDelegate = @PrintDelegate@
@@ -358,7 +357,8 @@ INCLUDES = -I$(top_srcdir) $(INCLTDL)
 ALLMANPAGES = Magick-config.1
 
 libMagick_la_LDFLAGS = -no-undefined \
-	-release $(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION)
+	-release $(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION) \
+	-version-info 0:0:0
 
 
 #AM_CFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
@@ -368,7 +368,7 @@ AM_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 MAGICK_BASE_SRCS = memory.c blob.c cache.c locale.c error.c monitor.c \
 	constitute.c image.c composite.c list.c color.c quantize.c segment.c \
 	resize.c transform.c shear.c enhance.c effect.c fx.c decorate.c \
-	annotate.c type.c draw.c render.c montage.c semaphore.c attribute.c \
+	annotate.c type.c draw.c render.c paint.c montage.c semaphore.c attribute.c \
 	signature.c random.c compress.c command.c gem.c registry.c magic.c magick.c \
 	delegate.c module.c static.c resource.c log.c timer.c utility.c cache_view.c \
 	stream.c version.c animate.c display.c widget.c xwindow.c PreRvIcccm.c \
@@ -377,10 +377,10 @@ MAGICK_BASE_SRCS = memory.c blob.c cache.c locale.c error.c monitor.c \
 
 # Platform specific source files that may appear in the library
 EXTRA_libMagick_la_SOURCES = nt_base.c nt_feature.c
-@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = nt_feature.c
 
 @WIN32_NATIVE_BUILD_TRUE@MAGICK_PLATFORM_SRCS = nt_base.c nt_feature.c
 @CYGWIN_BUILD_FALSE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = 
+@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = nt_feature.c
 @WITH_MODULES_FALSE@libMagick_la_SOURCES = $(MAGICK_BASE_SRCS) $(MAGICK_PLATFORM_SRCS)
 
 # Library sources
@@ -395,9 +395,9 @@ bin_SCRIPTS = Magick-config
 include_HEADERS = api.h attribute.h blob.h cache.h \
   cache_view.h command.h compress.h magick_config.h delegate.h \
   draw.h render.h error.h gem.h image.h list.h log.h magic.h magick.h \
-  module.h monitor.h quantize.h random.h resource.h registry.h semaphore.h \
-	signature.h timer.h utility.h version.h widget.h xwindow.h PreRvIcccm.h \
-	deprecate.h
+  module.h monitor.h quantize.h paint.h random.h resource.h registry.h \
+	semaphore.h signature.h timer.h utility.h version.h widget.h xwindow.h \
+	PreRvIcccm.h deprecate.h
 
 
 # Headers which are not installed but which are distributed
@@ -431,16 +431,16 @@ am__libMagick_la_SOURCES_DIST = memory.c blob.c cache.c locale.c error.c \
 	monitor.c constitute.c image.c composite.c list.c color.c \
 	quantize.c segment.c resize.c transform.c shear.c enhance.c \
 	effect.c fx.c decorate.c annotate.c type.c draw.c render.c \
-	montage.c semaphore.c attribute.c signature.c random.c \
+	paint.c montage.c semaphore.c attribute.c signature.c random.c \
 	compress.c command.c gem.c registry.c magic.c magick.c \
 	delegate.c module.c static.c resource.c log.c timer.c utility.c \
 	cache_view.c stream.c version.c animate.c display.c widget.c \
-	xwindow.c PreRvIcccm.c deprecate.c nt_feature.c nt_base.c
+	xwindow.c PreRvIcccm.c deprecate.c nt_base.c nt_feature.c
 am__objects_1 = memory.lo blob.lo cache.lo locale.lo error.lo monitor.lo \
 	constitute.lo image.lo composite.lo list.lo color.lo \
 	quantize.lo segment.lo resize.lo transform.lo shear.lo \
 	enhance.lo effect.lo fx.lo decorate.lo annotate.lo type.lo \
-	draw.lo render.lo montage.lo semaphore.lo attribute.lo \
+	draw.lo render.lo paint.lo montage.lo semaphore.lo attribute.lo \
 	signature.lo random.lo compress.lo command.lo gem.lo \
 	registry.lo magic.lo magick.lo delegate.lo module.lo static.lo \
 	resource.lo log.lo timer.lo utility.lo cache_view.lo stream.lo \
@@ -478,16 +478,17 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/magick.Plo ./$(DEPDIR)/memory.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/module.Plo ./$(DEPDIR)/monitor.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/montage.Plo ./$(DEPDIR)/nt_base.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/nt_feature.Plo ./$(DEPDIR)/quantize.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/random.Plo ./$(DEPDIR)/registry.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/render.Plo ./$(DEPDIR)/resize.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/resource.Plo ./$(DEPDIR)/segment.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/semaphore.Plo ./$(DEPDIR)/shear.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/signature.Plo ./$(DEPDIR)/static.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/stream.Plo ./$(DEPDIR)/timer.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/transform.Plo ./$(DEPDIR)/type.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/utility.Plo ./$(DEPDIR)/version.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/widget.Plo ./$(DEPDIR)/xwindow.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/nt_feature.Plo ./$(DEPDIR)/paint.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/quantize.Plo ./$(DEPDIR)/random.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/registry.Plo ./$(DEPDIR)/render.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/resize.Plo ./$(DEPDIR)/resource.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/segment.Plo ./$(DEPDIR)/semaphore.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/shear.Plo ./$(DEPDIR)/signature.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/static.Plo ./$(DEPDIR)/stream.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/timer.Plo ./$(DEPDIR)/transform.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/type.Plo ./$(DEPDIR)/utility.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/version.Plo ./$(DEPDIR)/widget.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/xwindow.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -628,6 +629,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/montage.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nt_base.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nt_feature.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/paint.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/quantize.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/random.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/registry.Plo@am__quote@
